src/css/page.css
/* ... */
html,
body {
  height: 100%;
  top: 0;
  margin: 0;
  font-size: 75%;
  font-family: var(--font-family);
}

.bg {
  background: linear-gradient(
      to bottom,
      rgba(251, 248, 248, 0.2),
      rgb(47, 47, 47)
    ),
    url(../img/gold.jpg) center no-repeat fixed;
    min-height: 100vh;
}

.container {
  width: var(--page-width);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  margin: 0 auto 8px auto;
  border-left: solid 8px var(--box-bg-color);
  border-right: solid 8px var(--box-bg-color);
  text-align: center;
}

.header {
  position: sticky;
  top: 0;
  flex-shrink: 0;
  background: var(--secondary-bg-color);
  z-index: 9999;
  padding-bottom: 0.5rem;
  margin: 0 1rem 0.5rem 1rem;
  border: solid 2px var(--box-bg-color);
  border-radius: 0.5rem 0.5rem 1rem 1rem;
}

#headerTop {
  top: 0;
  padding-top: 1rem;
  position: sticky;
  display: flex;
  font-size: 3rem;
  font-family: cursive;
  height: 6rem;
  margin: 0 auto 0.8rem auto;
  align-items: center;
  z-index: 100;
}

#logo {
  margin: 1rem;
  transition: all 0.3s linear;
}

#logo:hover {
  width: 140px;
  height: 90px;
  margin-right: 3rem;
}

#logotext {
  margin: 0;
  font-family: Ink free;
  font-style: italic;
  font-size: 4rem;
  font-weight: 800;
  color: #fff;
  /*text-shadow: 2px 2px var(--gold-font-color);*/
}

.btnDiv {
  display: flex;
  margin: auto 1rem auto auto;
  align-items: center;
}

.btn-update::before,
.btn-stack::before,
.dropbtn::before{
  border-radius: 0.7rem;
  content: ' ';
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  inset: 2px;
  background: #fff;
  z-index: -1;
  transform: scaleX(0);
  transform-origin: bottom right;
  transition: transform 0.5s ease;
}

.btn-update:hover::before,
.btn-stack:hover::before,
.dropbtn:hover::before{
  transform: scaleX(1);
  transform-origin: bottom left;
}

.btn-update,
.btn-stack{
  position: relative;
  border-top: solid 2px #fff !important;
  border-bottom: solid 2px #fff !important;
  border-left: none;
  border-right: none;
  font-size: 1.5rem;
  font-weight: 500;
  padding: 1rem 1rem;
  border-radius: 0.7rem;
  margin: auto 1rem;
  color: #fff;
  background-color: transparent;
  cursor: pointer;
  font-family: Ink free, cursive, sans-serif;
  transition: color 1s ease;
  z-index: 1;
}

.btn-update:hover,
.btn-stack:hover,
.dropbtn:hover{
  font-weight: 800;
  color: rgba(7, 7, 128, 0.8);
  z-index: 1;
  border-radius: 0.7rem;
}

#spotRunner {
  display: flex;
  flex-direction: row;
  justify-content: left;
  z-index: 999;
  color: var(--text-primary);
  font-family: 'Google Sans', Roboto, Arial, sans-serif;
  font-size: 1.5rem;
  background: var(--color-grey-light-2);
  margin: 0 1rem;
  border: solid 2px var(--box-border);
  border-radius: 5%/100%;
}

.spotTicker {
  display: flex;
  width: 100%;
  /*z-index: 999;*/
  padding: 0.5rem;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  font-family: 'Google Sans', Roboto, Arial, sans-serif;
  font-size: 1.5rem;
}

#metalCur {
  font-size: 1.25rem;
}

#spotBox {
  display: flex;
  gap: 0.5rem;
  z-index: 999;
}

#spotItems {
  display: flex;
  font-family: var(--font-family);
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

#spotPrice {
  padding-right: 0.5rem;
  font-size: 2rem;
}

.arrow {
  width: 0px;
  height: 0px;
  border: 0.8rem solid transparent;
}

.arrow-up {
  border-bottom-color: var(--price-up-color);
  border-top-width: 0px;
  grid-column: 6;
  grid-row: span 2;
}

.arrow-down {
  border-top-color: var(--price-drop-color);
  border-bottom-width: 0px;
  grid-column: 6;
  grid-row: span 2;
}

#change {
  display: block;
  padding-left: 0.5rem;
  text-align: left;
  font-size: 1rem;
}

#changeV {
  grid-row: 1;
}

#changeP {
  grid-row: 2;
}

#callTime {
  font-size: 1.25rem;
}

#accStatus {
  display: flex;
  background: var(--secondary-bg-color);
  padding: 0.5rem;
  margin: 0 1rem 0.5rem 1rem;
  border: solid 2px var(--box-bg-color);
  border-radius: 1rem 1rem 1rem 1rem;
  color: #fff;
  font-size: 1.25rem;
}

#accBox {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  padding: 0.25rem 0;
}

.page {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: auto auto;
  gap: 1rem;
  z-index: 0;
  font-family: var(--font-family);
  margin: 0 1rem 10px 1rem;
}

.chartArea {
  padding: 0 0 0 1rem;
  grid-column: 1 / 7;
  grid-row: 1;
  width: 100%;
  height: 350px;
  box-sizing: border-box;
}

.spotArea {
  grid-column: 7 / 9;
  grid-row: 1;
  background: var(--box-bg-color);
  border: solid 2px var(--box-border);
  border-radius: 1rem;
  padding: 0.5rem;
  height: 350px;
  box-sizing: border-box;
}

#spotDetails {
  padding: 0.5rem;
}

#chart {
  width: 100%;
  height: 350px;
}

.apexcharts-canvas {
  margin: 0 auto;
  background: var(--box-bg-color);
  border: solid 2px var(--box-border);
  border-radius: 1rem;
}
 /* 
.statTicker {
  grid-column: 7 / 9;
  grid-row: 1;
  display: flex;
  flex-direction: column;
  font-size: 1.25rem;
  color: var(--box-font-color);
  background: var(--box-bg-color);
  align-items: center;
  justify-content: flex-start;
  margin: 0 1rem 0 0;
  padding: 0.5rem 0;
  height: 350px;
  box-sizing: border-box;
  overflow: hidden;
}
    
#chart {
  width: 100% !important;
  height: 350px !important;
}

.apexcharts-canvas {
  margin: 0 auto;
  background: var(--box-bg-color);
  border: solid 2px var(--box-border);
  border-radius: 1rem;
}
*/
.statTicker {
  grid-column: 7 / 9;
  grid-row: 1 / 2;
  display: flex;
  flex-direction: column;
  font-size: 1.25rem;
  color: var(--box-font-color);
  background: var(--box-bg-color);
  align-items: center;
  justify-content: flex-start;
  margin: 0 1rem 0 0;
  padding: 0.5rem 0;
  height: 350px;
  box-sizing: border-box;
  border: solid 2px var(--box-border);
  border-radius: 1rem;
}
/* ... */

